# surf

./: .gitmodules  CMakeLists.txt  README.md  project.4coder
console/: CMakeLists.txt  main.cpp
console/src/: Arguments.h  test.h
core/: CMakeLists.txt
core/includes/: Fst.h  surfTypes.h
core/includes/Louds/: Dense.h  Sparse.h
core/includes/PrefixTree/: Node.h  Tree.h
core/includes/utils/: printer.h  utils.h
core/libs/: CMakeLists.txt
core/src/: Fst.cpp
core/src/Louds/: Dense.cpp  Dense.h  Sparse.cpp  Sparse.h
core/src/PrefixTree/: Tree.cpp  Tree.h
core/src/utils/: rank.h  select.h  utils.h
docs/: doxygen.conf
